# CVProcessor

./: LICENSE  README.md  authors.py  cv.py  cv.xlsx  education.py  institutes.py  intro.py  news.py  publications.py  pyproject.toml
.github/workflows/: pylint.yml
src/cvprocessor/: authors.py  common.py  cv.py  education.py  experience.py  grants_awards.py  institutes.py  intro.py  memberships.py  news.py  presentations.py  publications.py  references.py  research_interests.py  service.py  skills.py  software.py  supervision.py  teaching.py  year_data.py
src/cvprocessor/contact/: contact.py
src/cvprocessor/date/: date.py
src/cvprocessor/links/: links.py
src/cvprocessor/name/: name.py
src/cvprocessor/personal/: personal.py
src/cvprocessor/security/: security.py
src/cvprocessor_fdojurado/: common.py  cv.py  news.py  publications.py  software.py
