[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvprocessor"
version = "0.0.17"
authors = [
    { name = "F. Fernando Jurado-Lasso", email = "fdo.jurado@gmail.com" },
]
description = "CVProcessor is a Python library for processing CV (Curriculum Vitae) or resume documents."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "CV",
    "Curriculum Vitae",
    "Resume",
    "xslx",
]
dependencies = [
    "pandas",
]


[project.urls]
Homepage = "https://github.com/fdojurado/CVProcessor"
Issues = "https://github.com/fdojurado/CVProcessor/issues"
